[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sqlbase"
version = "0.1.0"
description = "Cross-platform security scanning toolkit (SQL injection, XSS, remediation)"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.28.0",
    "scikit-learn>=1.2.0",
    "numpy>=1.24.0",
]

[project.scripts]
sqlbase-scan = "sqlbase.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["sqlbase*"]
